# pyecsago

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyecsago/: __init__.py  ecsago.py
src/pyecsago/ea/: base.py  deterministic_crowding.py  haea.py  individual.py  population.py
src/pyecsago/interface/: base.py
src/pyecsago/utils/: data.py  dataviz.py  funcs.py  metrics.py
tests/: test_pyecsago.py
