[tool.poetry]
name = "pyecsago"
version = "0.1.0"
description = "Python implementation of the evolutionary clustering ECSAGO - Evolutionary Clustering with Self Adaptive Genetic Operators"
authors = ["Joan Sebastian Tamayo Rivera"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
